# stm32f446re_rust_example

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: adc.rs  dac.rs  dma.rs  external_interupt_gpio.rs  led.rs  led_by_hal.rs  pwm.rs  switch.rs  systick_timer.rs  timer_interupt.rs  timer_poling.rs  timer_poling_by_hal.rs
src/: main.rs
