[package]
name = "stm32f446re_rust_example"
version = "0.1.0"
authors = ["kapifuji"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.0.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["stm32f446", "rt"]

[dependencies.stm32f4]
version = "0.14.0"
features = ["stm32f446", "rt"]

[[bin]]
name = "stm32f446re_rust_example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
